Closed
Bug 1425835
Opened 8 years ago
Closed 7 years ago
Update libjpeg-turbo to 2.0.0
Categories
(Core :: Graphics: ImageLib, defect, P5)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| firefox64 | --- | fixed |
People
(Reporter: tjr, Assigned: RyanVM)
References
Details
(Keywords: perf, Whiteboard: [third-party-lib-audit] [gfx-noted])
Attachments
(1 file)
This is a (semi-)automated bug making you aware that there is an available upgrade for an embedded third-party library. You can leave this bug open, and it will be updated if a newer version of the library becomes available. If you close it as WONTFIX, please indicate if you do not wish to receive any future bugs upon new releases of the library.
libjpeg-turbo is currently at version 1.5.1 in mozilla-central, and the latest version of the library released is 1.5.3.
I fetched the latest version of the library from https://github.com/libjpeg-turbo/libjpeg-turbo/.
NOTE: We currently have 1.5.2 but MOZCHANGES wasn't updated last time with the new version number.
Updated•8 years ago
|
OS: Unspecified → All
Priority: -- → P5
Hardware: Unspecified → All
Whiteboard: [third-party-lib-audit] → [third-party-lib-audit] [gfx-noted]
Would it be possible to get this in for Firefox 60 because it is the next ESR?
| Assignee | ||
Comment 2•8 years ago
|
||
I didn't see anything in the changelog that looked relevant for Firefox. Did I miss something?
Sorry, you're right, just re-read the changelog again.
Please ignore what I posted.
| Reporter | ||
Comment 5•8 years ago
|
||
There's a 2.0 beta out; no security issues fixed though.
| Assignee | ||
Comment 6•7 years ago
|
||
FYI, version 2.x has made some pretty significant changes to the directory structure and build system, so the next update will be decidedly less trivial than the past few.
status-firefox59:
affected → ---
Summary: Update libjpeg-turbo to 1.5.3 → Update libjpeg-turbo to 2.0.0
https://github.com/libjpeg-turbo/libjpeg-turbo/releases/tag/2.0.0
libjpeg-turbo 2.0.0 released.
| Assignee | ||
Comment 8•7 years ago
|
||
I've got a working patch for this. I also included the upstream fix for issue #288 as well to avoid a crash on older Win7 systems (https://github.com/libjpeg-turbo/libjpeg-turbo/issues/288).
Assignee: nobody → ryanvm
Keywords: perf
| Assignee | ||
Comment 9•7 years ago
|
||
Also includes the fix for upstream issue #288 to avoid crashes on some older Win7 systems.
| Assignee | ||
Comment 10•7 years ago
|
||
Comment 11•7 years ago
|
||
Pushed by rvandermeulen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a3fa8bb51b3c
Update libjpeg-turbo to version 2.0.0. r=aosmond
Comment 12•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in
before you can comment on or make changes to this bug.
Description
•