Bug 1425835 - Update libjpeg-turbo to version 2.0.0. r=aosmond

Also includes the fix for upstream issue #288 to avoid crashes on some older Win7 systems.

Differential Revision: https://phabricator.services.mozilla.com/D7758